--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             <h1>PC-DOCTORS-HUB</h1>
           </div>
           <div class="login_sign">
-            <button class="log_in">Log in</button>
-            <button class="sign_up">Sign up</button>
+            <button class="log_in"><a href="/login/login.html" class="a">Log In</a></button>
+            <button class="sign_up"><a href="/login/login.html" class="a">Sign up</a></button>
           </div>
         </nav>
       </div>
